stein saks papir spillet skal stoppe når man trykker på stein for mange ganger

--- a/arkiv/js-manipulering/Oppgaver 30.10.2024/style.css
+++ b/arkiv/js-manipulering/Oppgaver 30.10.2024/style.css
@@ -9,6 +9,7 @@ body{
     align-items: center;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .stein, .saks, .papir {
@@ -54,6 +55,9 @@ body{
     border-radius: 1rem;
     background-color: #123456;
     flex-wrap: wrap;
+    justify-content: end;
+    align-items: center;
+    display: flex;
 }
 
 /* .saks {
